--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ledgersmb (1.5.21+ds-2~!) UNRELEASED; urgency=medium
+
+  TODO:
+    * Pending *.po file updates.
+  * Import updated debian/po/es.po file.
+
+ -- Robert James Clay <jame@rocasa.us>  Wed, 25 Jul 2018 21:39:13 -0400
+
 ledgersmb (1.5.21+ds-1) unstable; urgency=medium
 
   * New series 1.5.x Upstream Release (Closes: #874664)
