--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -29,7 +29,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ledgersmb 1.3.15-3\n"
+"Project-Id-Version: ledgersmb 1.5.21+ds-1\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2018-03-23 21:01-0400\n"
 "PO-Revision-Date: 2012-06-17 16:00+0200\n"
