--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -1,14 +1,14 @@
 # Czech PO debconf template translation of ledgersmb.
 # Copyright (C) 2012 Michal Simunek <michal.simunek@gmail.com>
 # This file is distributed under the same license as the ledgersmb package.
-# Michal Simunek <michal.simunek@gmail.com>, 2012.
+# Michal Simunek <michal.simunek@gmail.com>, 2012 - 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ledgersmb 1.3.15-3\n"
+"Project-Id-Version: ledgersmb 1.5.21+ds-1\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2018-03-23 21:01-0400\n"
-"PO-Revision-Date: 2012-06-07 11:31+0200\n"
+"PO-Revision-Date: 2018-07-31 09:31+0200\n"
 "Last-Translator: Michal Simunek <michal.simunek@gmail.com>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "Language: cs\n"
@@ -25,19 +25,14 @@ msgstr "Přihlašovací jméno správce databáze:"
 #. Type: string
 #. Description
 #: ../templates:2001
-#, fuzzy
-#| msgid ""
-#| "Please enter the login of the LedgerSMB database administrative user. "
-#| "This login is needed for the administrative web user interface, typically "
-#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
 "http://localhost:5762/setup.pl."
 msgstr ""
 "Zadejte prosím přihlašovací jméno správce databáze LedgerSMB. Toto jméno je "
-"třeba pro správcovské webové rozhraní, obvykle dostupném na http://localhost/"
-"ledgersmb/setup.pl."
+"třeba pro správcovské webové rozhraní, obvykle dostupném na "
+"http://localhost:5762/setup.pl."
 
 #. Type: password
 #. Description
@@ -48,25 +43,20 @@ msgstr "Heslo správce databáze:"
 #. Type: password
 #. Description
 #: ../templates:3001
-#, fuzzy
-#| msgid ""
-#| "Please enter the password of the LedgerSMB database administrative user. "
-#| "This password is needed for the administrative web user interface, "
-#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost:5762/setup.pl."
 msgstr ""
 "Zadejte prosím heslo pro správce databáze LedgerSMB. Toto heslo je třeba pro "
-"správcovské webové rozhraní, obvykle dostupném na http://localhost/ledgersmb/"
-"setup.pl."
+"správcovské webové rozhraní, obvykle dostupném na "
+"http://localhost:5762/setup.pl."
 
 #. Type: select
 #. Description
 #: ../templates:4001
 msgid "Web Reverse Proxy to configure?"
-msgstr ""
+msgstr "Která webová proxy se má nastavit?"
 
 #. Type: select
 #. Description
@@ -78,44 +68,18 @@ msgid ""
 "can leave the choice as None if it is not needed or if the web proxy will be "
 "set up remotely."
 msgstr ""
+"Aplikace LedgerSMB je nyní přednastavena k tomu, aby byla dostupná na portu 5762, "
+"a aby byla přímo spustitelná aplikací Starman. Pokud je třeba jiný přístup, lze "
+"nastavit pomocí Apache či Nginx či Lighttpd či Varnish reverzní proxy, nebo pokud "
+"jiný přistup třeba není, nebo pokud bude webová proxy nastavena vzdáleně, můžete "
+"ponechat volbu None."
 
 #. Type: select
 #. Description
 #: ../templates:4001
-#, fuzzy
-#| msgid ""
-#| "More general information about the initial configuration of the "
-#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
 "For more details, please see the Web Proxy section that can be found in the /"
 "usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
-"Obecnější informace o počátečním nastavení aplikace naleznete v souboru /usr/"
-"share/doc/ledgersmb/README.Debian."
-
-#, fuzzy
-#~| msgid "Configure LedgerSMB automatically?"
-#~ msgid "Configure LedgerSMB Database administrative user automatically?"
-#~ msgstr "Nastavit LedgerSMB automaticky?"
-
-#, fuzzy
-#~| msgid ""
-#~| "The configuration program for the package can automatically configure "
-#~| "some aspects of LedgerSMB, such as the LedgerSMB database user."
-#~ msgid ""
-#~ "The configuration program for the package can automatically configure the "
-#~ "LedgerSMB database user. Enable if you want to do that, disable if not."
-#~ msgstr ""
-#~ "Konfigurační program pro balíček může automaticky nastavit některé "
-#~ "aspekty LedgerSMB, jako je databázový uživatel pro LedgerSMB."
-
-#, fuzzy
-#~| msgid ""
-#~| "More general information about the initial configuration of the "
-#~| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
-#~ msgid ""
-#~ "More information about the configuration of the database administrative "
-#~ "user can be found in /usr/share/doc/ledgersmb/README.Debian."
-#~ msgstr ""
-#~ "Obecnější informace o počátečním nastavení aplikace naleznete v souboru /"
-#~ "usr/share/doc/ledgersmb/README.Debian."
+"Pro více informací se prosím podívejte do sekce Web Proxy, kterou naleznete v "
+"souboru /usr/share/doc/ledgersmb/README.Debian."
