--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-ledgersmb (1.5.21+ds-2~!) UNRELEASED; urgency=medium
+ledgersmb (1.5.21+ds-2~2) UNRELEASED; urgency=medium
 
   TODO:
     * Pending *.po file updates.
-  * Import updated debian/po/es.po file.
+  * Updated debconf debian/po/es.po file.
+  * Updated debconf debian/po/ru.po file. (Closes: #904708)
+  * Updated debconf debian/po/cs.po file. (Closes: #905098)
+  * Update the debian/po/* information in the debian/copyright file.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 25 Jul 2018 21:39:13 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 31 Jul 2018 10:50:12 -0400
 
 ledgersmb (1.5.21+ds-1) unstable; urgency=medium
 
