--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2018-03-23 21:01-0400\n"
-"PO-Revision-Date: 2012-06-13 17:31+0100\n"
+"PO-Revision-Date: 2018-07-27 15:10+0200\n"
 "Last-Translator: Julien Patriarca <patriarcaj@gmail.com>\n"
 "Language-Team: FRENCH <debian-l10n-fr@lists.debian.org>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.0.9\n"
 
 #. Type: string
 #. Description
@@ -25,11 +26,6 @@ msgstr "Identifiant de l'administrateur de la base de données : "
 #. Type: string
 #. Description
 #: ../templates:2001
-#, fuzzy
-#| msgid ""
-#| "Please enter the login of the LedgerSMB database administrative user. "
-#| "This login is needed for the administrative web user interface, typically "
-#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
@@ -37,7 +33,7 @@ msgid ""
 msgstr ""
 "Veuillez indiquer l'identifiant de l'administrateur LedgerSMB. Cet "
 "identifiant est nécessaire pour accéder à l'interface web d'administration, "
-"généralement située à l'adresse http://localhost/ledgersmb/setup.pl."
+"généralement située à l'adresse http://localhost:5762/setup.pl."
 
 #. Type: password
 #. Description
@@ -48,25 +44,21 @@ msgstr "Mot de passe de l'administrateur de la base de données : "
 #. Type: password
 #. Description
 #: ../templates:3001
-#, fuzzy
-#| msgid ""
-#| "Please enter the password of the LedgerSMB database administrative user. "
-#| "This password is needed for the administrative web user interface, "
-#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
 "at http://localhost:5762/setup.pl."
 msgstr ""
-"Veuillez indiquer le mot de passe de l'administrateur LedgerSMB. Ce mot de "
-"passe est nécessaire pour accéder à l'interface web d'administration, "
-"généralement située à l'adresse http://localhost/ledgersmb/setup.pl."
+"Veuillez indiquer le mot de passe de l'administrateur de base de données "
+"pour LedgerSMB. Ce mot de passe est nécessaire pour accéder à l'interface "
+"web d'administration, généralement située à l'adresse http://localhost:5762/"
+"setup.pl."
 
 #. Type: select
 #. Description
 #: ../templates:4001
 msgid "Web Reverse Proxy to configure?"
-msgstr ""
+msgstr "Faut-il configurer un serveur mandataire inverse (Reverse Proxy) ?"
 
 #. Type: select
 #. Description
@@ -78,20 +70,22 @@ msgid ""
 "can leave the choice as None if it is not needed or if the web proxy will be "
 "set up remotely."
 msgstr ""
+"L'application LedgerSMB est désormais accessible par défaut sur le port "
+"5762, et est directement lancée par Starman. Si un autre accès est "
+"nécessaire, un serveur mandataire inverse (Reverse Proxy) peut être "
+"paramétré en utilisant Apache, Nginx, Lighttpd ou encore Varnish. Vous "
+"pouvez également laisser ce choix à None si cela n'est pas nécessaire ou "
+"bien si le serveur mandataire sera installé ailleurs."
 
 #. Type: select
 #. Description
 #: ../templates:4001
-#, fuzzy
-#| msgid ""
-#| "More general information about the initial configuration of the "
-#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
 "For more details, please see the Web Proxy section that can be found in the /"
 "usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
-"Des renseignements supplémentaires sur la configuration initiale de "
-"l'application sont disponibles dans /usr/share/doc/ledgersmb/README.Debian."
+"Des renseignements supplémentaires sur le serveur mandataire sont "
+"disponibles dans /usr/share/doc/ledgersmb/README.Debian."
 
 #, fuzzy
 #~| msgid "Configure LedgerSMB automatically?"
