--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,15 @@
-ledgersmb (1.5.21+ds-2~2) UNRELEASED; urgency=medium
+ledgersmb (1.5.21+ds-2~3) UNRELEASED; urgency=medium
 
   TODO:
-    * Pending *.po file updates.
+    * Pending debian/po/*.po file updates.
   * Updated debconf debian/po/es.po file.
   * Updated debconf debian/po/ru.po file. (Closes: #904708)
   * Updated debconf debian/po/cs.po file. (Closes: #905098)
+  * Updated debconf debian/po/fr.po file. (Closes: #905637)
   * Update the debian/po/* information in the debian/copyright file.
+  * Declare compliance with Debian Policy 4.2.0, no changes required.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 31 Jul 2018 10:50:12 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 07 Aug 2018 23:36:11 -0400
 
 ledgersmb (1.5.21+ds-1) unstable; urgency=medium
 
