--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -1,17 +1,17 @@
 # Danish translation ledgersmb.
-# Copyright (C) 2012 ledgersmb & nedenstående oversættere.
+# Copyright (C) 2018 ledgersmb & nedenstående oversættere.
 # This file is distributed under the same license as the ledgersmb package.
-# Joe Hansen <joedalton2@yahoo.dk>, 2012.
+# Joe Hansen <joedalton2@yahoo.dk>, 2012, 2018.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2018-03-23 21:01-0400\n"
-"PO-Revision-Date: 2012-06-24 23:51+0200\n"
+"PO-Revision-Date: 2018-08-11 23:51+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <debian-l10n-danish@lists.debian.org>\n"
-"Language: \n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,19 +25,14 @@ msgstr "Logind for databasens administrative bruger:"
 #. Type: string
 #. Description
 #: ../templates:2001
-#, fuzzy
-#| msgid ""
-#| "Please enter the login of the LedgerSMB database administrative user. "
-#| "This login is needed for the administrative web user interface, typically "
-#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
 "http://localhost:5762/setup.pl."
 msgstr ""
-"Indtast venligst logindet for LedgerSMB-databasens administrative bruger. "
+"Indtast venligst logind for LedgerSMB-databasens administrative bruger. "
 "Dette logind er krævet for den administrative brugerflade på nettet, typisk "
-"på http://localhost/ledgersmb/setup.pl."
+"på http://localhost:5762/setup.pl."
 
 #. Type: password
 #. Description
@@ -48,11 +43,6 @@ msgstr "Adgangskode for databasens administrative bruger"
 #. Type: password
 #. Description
 #: ../templates:3001
-#, fuzzy
-#| msgid ""
-#| "Please enter the password of the LedgerSMB database administrative user. "
-#| "This password is needed for the administrative web user interface, "
-#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
@@ -60,13 +50,13 @@ msgid ""
 msgstr ""
 "Indtast venligst adgangskoden for LedgerSMB-databasens administrative "
 "bruger. Denne adgangskode er krævet for den administrative brugerflade på "
-"nettet, typisk på http://localhost/ledgersmb/setup.pl."
+"nettet, typisk på http://localhost:5762/setup.pl."
 
 #. Type: select
 #. Description
 #: ../templates:4001
 msgid "Web Reverse Proxy to configure?"
-msgstr ""
+msgstr "Web Reverse Proxy at konfigurere?"
 
 #. Type: select
 #. Description
@@ -78,44 +68,19 @@ msgid ""
 "can leave the choice as None if it is not needed or if the web proxy will be "
 "set up remotely."
 msgstr ""
+"LedgerSMB-programmet er nu som standard tilgængelig på port 5762, og afvikles "
+"direkte af Starman. Hvis anden adgang er krævet, kan en Reverse Proxy "
+"konfigureres via Apache eller Nginx eller Lighttpd eller Varnish, eller du "
+"kan efterlade valget som None, hvis den ikke er krævet eller hvis netproxyen "
+"vil blive opsat eksternt."
 
 #. Type: select
 #. Description
 #: ../templates:4001
-#, fuzzy
-#| msgid ""
-#| "More general information about the initial configuration of the "
-#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
 "For more details, please see the Web Proxy section that can be found in the /"
 "usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
-"Mere generel information om startkonfigurationen af programmet kan ses i /"
-"usr/share/doc/ledgersmb/README.Debian."
+"Yderligere detaljer kan ses i Web Proxy-afsnittet, som kan findes i filen "
+"</usr/share/doc/ledgersmb/README.Debian>."
 
-#, fuzzy
-#~| msgid "Configure LedgerSMB automatically?"
-#~ msgid "Configure LedgerSMB Database administrative user automatically?"
-#~ msgstr "Konfigurer LedgerSMB automatisk?"
-
-#, fuzzy
-#~| msgid ""
-#~| "The configuration program for the package can automatically configure "
-#~| "some aspects of LedgerSMB, such as the LedgerSMB database user."
-#~ msgid ""
-#~ "The configuration program for the package can automatically configure the "
-#~ "LedgerSMB database user. Enable if you want to do that, disable if not."
-#~ msgstr ""
-#~ "Konfigurationsprogrammet for pakken kan automatisk konfigurere nogle "
-#~ "aspekter af LedgerSMB, såsom LedgerSMB-databasebrugeren."
-
-#, fuzzy
-#~| msgid ""
-#~| "More general information about the initial configuration of the "
-#~| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
-#~ msgid ""
-#~ "More information about the configuration of the database administrative "
-#~ "user can be found in /usr/share/doc/ledgersmb/README.Debian."
-#~ msgstr ""
-#~ "Mere generel information om startkonfigurationen af programmet kan ses i /"
-#~ "usr/share/doc/ledgersmb/README.Debian."
