--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -2,13 +2,14 @@
 # Copyright (C) 2012 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the LEDGERSMB package.
 # Erik Pfannenstein <debianignatz@gmx.de>, 2012.
+# Helge Kreutzmann <debian@helgefjell.de>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: ledgersmb 1.3.15-3\n"
+"Project-Id-Version: ledgersmb 1.5.21+ds-1\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2018-03-23 21:01-0400\n"
-"PO-Revision-Date: 2012-06-07 20:51+0200\n"
-"Last-Translator: Erik Pfannenstein <debianignatz@gmx.de>\n"
+"PO-Revision-Date: 2018-08-18 13:50+0200\n"
+"Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -26,11 +27,6 @@ msgstr "Benutzername des Datenbankadministrators:"
 #. Type: string
 #. Description
 #: ../templates:2001
-#, fuzzy
-#| msgid ""
-#| "Please enter the login of the LedgerSMB database administrative user. "
-#| "This login is needed for the administrative web user interface, typically "
-#| "at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the login of the LedgerSMB database administrative user. This "
 "login is needed for the administrative web user interface, typically at "
@@ -38,7 +34,7 @@ msgid ""
 msgstr ""
 "Bitte geben Sie den Benutzernamen des LedgerSMB-Datenbankadministrators ein. "
 "Dieser Benutzername ist für die administrative Weboberfläche nötig, die in "
-"der Regel unter http://localhost/ledgersmb/setup.pl erreichbar ist."
+"der Regel unter http://localhost:5762/setup.pl erreichbar ist."
 
 #. Type: password
 #. Description
@@ -49,11 +45,6 @@ msgstr "Passwort des Datenbankadministrators"
 #. Type: password
 #. Description
 #: ../templates:3001
-#, fuzzy
-#| msgid ""
-#| "Please enter the password of the LedgerSMB database administrative user. "
-#| "This password is needed for the administrative web user interface, "
-#| "typically at http://localhost/ledgersmb/setup.pl."
 msgid ""
 "Please enter the password of the LedgerSMB database administrative user. "
 "This password is needed for the administrative web user interface, typically "
@@ -61,13 +52,14 @@ msgid ""
 msgstr ""
 "Bitte geben Sie das Passwort des LedgerSMB-Datenbankadministrators ein. "
 "Dieses Passwort wird für die administrative Weboberfläche nötig, die in der "
-"Regel unter http://localhost/ledgersmb/setup.pl erreichbar ist."
+"Regel unter http://localhost:5762/setup.pl erreichbar ist."
 
+#, new
 #. Type: select
 #. Description
 #: ../templates:4001
 msgid "Web Reverse Proxy to configure?"
-msgstr ""
+msgstr "Zu konfigurierender inverser Web-Proxy?"
 
 #. Type: select
 #. Description
@@ -79,44 +71,19 @@ msgid ""
 "can leave the choice as None if it is not needed or if the web proxy will be "
 "set up remotely."
 msgstr ""
+"Die Anwendung LedgerSMB wird nun standardmäßig auf Port 5762 verfügbar "
+"gemacht und direkt von Starman ausgeführt. Falls weiterer Zugriff benötigt "
+"wird, muss ein inverser Proxy mittels Apache, Nginx, Lighttpd oder Varnish "
+"konfiguriert werden, oder Sie lassen die Auswahl auf »None«, falls dies "
+"nicht benötigt wird oder falls der Web-Proxy in der Ferne eingerichtet wird."
 
+#, new
 #. Type: select
 #. Description
 #: ../templates:4001
-#, fuzzy
-#| msgid ""
-#| "More general information about the initial configuration of the "
-#| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
 msgid ""
 "For more details, please see the Web Proxy section that can be found in the /"
 "usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
-"Weitere allgemeine Informationen zur Erstkonfiguration der Anwendung finden "
-"Sie in /usr/share/doc/ledgersmb/README.Debian."
-
-#, fuzzy
-#~| msgid "Configure LedgerSMB automatically?"
-#~ msgid "Configure LedgerSMB Database administrative user automatically?"
-#~ msgstr "LedgerSMB automatisch konfigurieren?"
-
-#, fuzzy
-#~| msgid ""
-#~| "The configuration program for the package can automatically configure "
-#~| "some aspects of LedgerSMB, such as the LedgerSMB database user."
-#~ msgid ""
-#~ "The configuration program for the package can automatically configure the "
-#~ "LedgerSMB database user. Enable if you want to do that, disable if not."
-#~ msgstr ""
-#~ "Das Konfigurationsprogramm des Pakets kann einige Aspekte von LedgerSMB "
-#~ "automatisch konfigurieren, unter anderem den LedgerSMB-Datenbankbenutzer."
-
-#, fuzzy
-#~| msgid ""
-#~| "More general information about the initial configuration of the "
-#~| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
-#~ msgid ""
-#~ "More information about the configuration of the database administrative "
-#~ "user can be found in /usr/share/doc/ledgersmb/README.Debian."
-#~ msgstr ""
-#~ "Weitere allgemeine Informationen zur Erstkonfiguration der Anwendung "
-#~ "finden Sie in /usr/share/doc/ledgersmb/README.Debian."
+"Für weitere Details lesen Sie bitte den Abschnitt »Web Proxy« aus der Datei /"
+"usr/share/doc/ledgersmb/README.Debian file."
